Fix button alignment on UI Pref page

--- a/src/assets/styles/themes/ix-blue.scss
+++ b/src/assets/styles/themes/ix-blue.scss
@@ -735,3 +735,9 @@ vm-table .ngx-datatable .datatable-body {
 .form-ex-flex-container {
   @include variable(background, --bg1, $bg1);
 }
+
+// Align buttons on UI Prefs form
+.prefs-form .mat-card-actions {
+  text-align: left !important;
+  padding-left: 10px;
+}
